[project]
name = "rocketbotte"
version = "0.1.1"
description = "A bot for rocketchat messaging, allowing you to react to messages or commands."
authors = [
    {name = "Styfore",email = "rocketbotte@styfore.ovh"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp[speedups] (>=3.11.18,<4.0.0)",
]

[tool.poetry]
packages = [{include = "rocketbotte", from = "src"}]


[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
