[project]
name = "rocketbotte"
version = "0.1.0"
description = ""
authors = [
    {name = "Styfore",email = "rocketbotte@styfore.ovh"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp[speedups] (>=3.11.18,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "rocketbotte", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
